--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     
     <!-- Application Scripts -->
     <script src="js/slides.js"></script>
-    <script src="js/graphics.js"></script>
+    <!-- <script src="js/graphics.js"></script> -->
+    <script src="js/graphics-core.js"></script>
+    <script src="js/graphics-static.js"></script>
+    <!-- <script src="js/graphics.js"></script> -->
     <script src="js/speaker-notes.js"></script>
     <script src="js/main.js"></script>
 </body>
