--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.4.0/dist/theme/black.css" id="theme">
     
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/themes.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/theme.css">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,7 @@
     <!-- <script src="js/graphics.js"></script> -->
     <script src="js/graphics-core.js"></script>
     <script src="js/graphics-static.js"></script>
-    <!-- <script src="js/graphics.js"></script> -->
+    <script src="js/graphics-interactive.js"></script>
     <script src="js/speaker-notes.js"></script>
     <script src="js/main.js"></script>
 </body>
